select csv/geojson
